--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.2.1"
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21'
 //        classpath 'com.xa.my:pluginMaven:1.0.0'
-        classpath 'com.xa.my:pluginMaven:1.0.0-SNAPSHOT'
+//        classpath 'com.xa.my:pluginMaven:1.0.0-SNAPSHOT'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
 //        classpath "com.alibaba:arouter-register:1.0.2"
 
@@ -44,7 +44,7 @@ buildscript {
 
 apply from: 'config.gradle'
 apply from: 'plugin.gradle'
-apply plugin: 'RouterPlugin'
+//apply plugin: 'RouterPlugin'
 //apply plugin: 'com.alibaba.arouter'
 
 allprojects {
