--- a/common/build.gradle
+++ b/common/build.gradle
@@ -39,6 +39,24 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    sourceSets{
+        def dirs = ['someSource',]
+        main {
+            dirs.each { dir ->
+                java.srcDir("src/${dir}/java")
+                res.srcDir("src/${dir}/res")
+            }
+        }
+//        main{
+//            if (rootProject.ext.android.is_application) {
+//                manifest.srcFile 'src/main/AndroidManifest.xml'
+//                java.srcDir 'rc/main/module'    //用到才编译
+//            } else {
+//                manifest.srcFile 'src/main/manifest/AndroidManifest.xml'
+//            }
+//        }
+    }
 }
 
 dependencies {
