--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,9 @@ include ':common'
 include ':pluginMaven'
 include ':testMaven'
 include ':JitpackTest:mylibrary'
+include ':farm'
+include ':farm:export'
+include ':farm:impl'
+include ':device'
+include ':device:devExport'
+include ':device:devImpl'
