--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,11 @@ android {
 dependencies {
 
     implementation rootProject.ext.versions.publicDep
-//    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation project(path: ':farm:impl')
+    implementation project(path: ':farm:export')
+    implementation project(path: ':device:devImpl')
+    implementation project(path: ':device:devExport')
+    //    implementation 'androidx.appcompat:appcompat:1.3.0'
 //    implementation 'com.google.android.material:material:1.4.0'
 //    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation rootProject.ext.versions.junit
@@ -57,7 +61,8 @@ dependencies {
     implementation project(':login')
     kapt 'com.alibaba:arouter-compiler:1.2.1'
 
-    implementation 'com.xa.my:testMaven:1.0.0-SNAPSHOT'
+//    implementation 'com.xa.my:testMaven:1.0.0-SNAPSHOT'
 //    implementation 'com.github.zbliang08:JitpackTest:v1.0.3'
+//    git submodule add https://github.com/zbliang08/JitpackTest
     implementation project(':JitpackTest:mylibrary')
 }
